# spotify

./: Pipfile  README.md  app.py  auth_utils.py  credentials.json.example  current_playing.json  current_playing.py  features.py  my_playlists.py  my_top.py  playlist.json  pyproject.toml  recommend.py  requirements.txt  search.py  search_album.py  spotify top playlist.json  spotify.py  spotify_utils.py
.github/workflows/: master_ducala-spotipy.yml
sample data/: Fantaisie in F Minor, Op. 49.html  features japan pop.json  features.json  japan.html  ww top artists.html
template/: base.html  home.html  index.html  player.html  search.html
